--- a/assets/css/extrato.css
+++ b/assets/css/extrato.css
@@ -1,589 +1,274 @@
+/* GERAL */
+
 @import url('https://fonts.cdnfonts.com/css/wise');
-
-/* ESTILO GERAL */
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-  }
-  
-  :root{
-    font-size: 62.5%;
-    --green-gradient: linear-gradient(180deg, #278848 0%, #59a928 100%);
-    --white: #fff;
-    --gray-400: #e8ebe6;
-    --gray-100: #fafafa;
-    --green-ligth: #9fe870;
-    --green-hover: #c1f1a3;
-    --blue-light: #A0E1E1;
-    --blue-transparent: #16330014;
-    --green-transparent: #285009;
-    --black-700: #0e0f0c;
-    --black-green: #163300;
-    --gray-500: rgba(85, 85, 85, 0.491);
-    --dove-gray-900: #3d3d3d;
-    --font-primary: 'WISE', sans-serif;
-    --font-secondary: 'Poppins', sans-serif;
-  }
-  
-  body{
-    font-family: var(--font-secondary);
-    font-size: 16px; /* Ajuste conforme necessário */
-  }
-  .interface{
-    padding: 2.5rem 4% ;
-    
-  }
-  
-  
-  /*  NAVBAR */
-  
-  header{
-    width: 100%;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    position: fixed;
-    height: 7rem;
-    z-index: 99997;
-    top: 0;
-    left: 0;
-    transition: .5s;
-    background-color: #163300;
-  }
-  header.rolagem {
-    background-color: #212121;
-    box-shadow: 0px 2px 10px #070707;
-    
-  }
-  header > .interface{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 4%;       
-  }
-  .logo img{
-    width: 25rem;   
-  }
-  .menu--desktop ul{
-    display:flex ;
-     list-style: none;  
-  }
-  .nav--itens{        
-    padding: 0rem 2.4rem;
-  }
-  .nav--link{
-    text-decoration: none;
-    color: #989696;       
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    position: relative;     
-  }
-  .nav--link:hover{
-    color: #fff;
-  }
-  .nav--link::after{
-    content: " ";
-    width: 0;
-    height: 0.3rem;
-    background-image: linear-gradient(180deg, #278848 0%, #59A928 100%);
-    position: absolute;
-    top: 2.4rem;
-    left: 30px;
-    border-radius: 3.1rem;
-    transition: width 0.5s  ;
-  }
-  .nav--link:hover::after{
-    width: 65%;
-  }
-  .nav--active{
-    color: #fff;
-    position: relative;
-    
-  }
-  .nav--active::after{
-    content: " ";
-    width: 65%;
-    height: 0.3rem;
-    background-image: linear-gradient(180deg, #278848 0%, #59A928 100%);
-    position: absolute;
-    top: 2.4rem;
-    left: 30px;
-    border-radius: 3.1rem;
-   
-  }
-  .nav--link i{
-    font-size: 1.5rem;
-    margin-right: 0.8rem;
-  
-  }
-  
-  /* MENU MOBILE */
-  
-  .btn--open{
-    display: none;
-  }
-  .btn--open i{
-    color: #59a928;
-    font-size: 40px;
-  }
-  .btn--close{
-    padding: 20px 5%;
-  }
-  .btn--close i{
-    font-size: 30px;
-    color: #59a928;
-  }
-  .menu--mobile{
-    display: none;
-    background-color: #212121;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 99999;
-    width: 0%;
-    overflow: hidden;
-    transition: .2s;
-  }
-  .menu--mobile.open--menu{
-    width: 70% ;
-  }
-  .menu--mobile.open--menu ~ .overlay--menu{
-    display: block;
-  }
-  .menu--mobile nav ul{
-    text-align: right;
-    
-  }
-  .menu--mobile nav ul li a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.5rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    display: block;
-    padding: 30px 8%;
-    
-  }
-  .menu--mobile nav ul li a:hover{
-    background-color: #59a928;
-    color: #000;
-  }
-  .menu--mobile nav ul li a i{
-    margin-left: 1.3rem; 
-  }
-  .overlay--menu{
-    display: none;
-    background-color: #000000b8;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99998;
-  }
-  /* MAIN */
-  main{
-    font-family: 'Montserrat', sans-serif;
-    }
-  main > .interface{
-    padding: 2.5rem 4% ;
-    }
+}
+:root {
+  --green-gradient: linear-gradient(180deg, #278848 0%, #59a928 100%);
+  --white: #fff;
+  --gray-400: #e8ebe6;
+  --gray-100: #fafafa;
+  --green-ligth: #9fe870;
+  --green-hover: #c1f1a3;
+  --blue-light: #A0E1E1;
+  --blue-transparent: #16330014;
+  --green-transparent: #285009;
+  --black-700: #0e0f0c;
+  --black-green: #163300;
+  --gray-500: rgba(85, 85, 85, 0.55);
+  --dove-gray-900: #3d3d3d;
+  --font-primary: 'WISE', sans-serif;
+  --font-secondary: 'Poppins', sans-serif;
+}
 
-  h2.title{
-    color: var(--dove-gray-900);
-    font-size: 3.2rem;
-    text-align: left;
-    text-shadow: 0px 1px 3px #ffffff ;
-    font-weight: 400;
-    margin: auto;
-  }
-  h2.title span{
-    position: absolute;
-  }
-  
-  h2.title span::after{
-    content: " ";
-    width: 100px;
-    height: 0.5rem;
-    background-image: linear-gradient(180deg, #278848 0%, #59A928 100%);
-    position: absolute;
-    top: 1.5rem;
-    left: 10px;
-    border-radius: 3.1rem;
-  }
-  .box--container{
-    max-width: 1280px;  
-    display: grid;
-    margin: auto;
-    grid-template-columns: repeat(auto-fit,minmax(180px,auto));
-    gap: 2rem;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-  .box{
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  box-shadow: #070707 5px 5px 12px;
-  background-color: #3d3d3d;
-  position: relative;
-  overflow: hidden;
-  }
-  .box img{
-    width: 100%;
-    height:85%;
-    object-fit: cover;
-    cursor: pointer;
-  }
-  .box--info{
-  color: #eee;
+.h2{
+    font-family: 'WISE', sans-serif;
+    font-size: large;
+    font-style: normal;
+}
+
+.html{
+    scroll-behavior: smooth;
+}
+body {
+   height: 500vh;
+}
+
+main{
+    flex:  1;
+    margin-top: 100px;
+}
+
+/* HEADER */
+
+
+.menu-desktop {
+  padding: 1.5rem 6%;
+  background-color: var(--black-green);
+  color: var(--green-ligth);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1.3rem 2.3rem 2.5rem 2rem;
-  letter-spacing: 0.5px;
-  margin-bottom: 20px;
-  font-size: 8px;
-  
-  }
-  .box--info span{
-  background-color: #18171c;
-  padding: .8rem .5rem;
-  border-radius: 3px;
-  font-weight: bold;
-  margin-left: 10px;
-  align-items: center;
-  justify-content: center;
-  }
-  .box--info span.green{
-  color: lightgreen;
-  }
-  .box--info span.orange{
-  color: orange;
-  }
-  .box--info span.red{
-  color: red;
-  }
-  .box--overview{
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #fff;
-    padding: 2.3rem;
-    max-height: 100%;
-    transform: translateY(101%);
-    }
-    .box:hover .box--overview{
-    transform: translateY(0);
-    }
-    .know-more{
-    background-color: #59A928;
-    color: #fff;
-    font: 1.1rem;
-    font-weight: bold;
-    border: 0;
-    border-radius: 50px;
-    padding: 0.3rem 0.8rem;
-    margin-top: 1rem;
-    cursor: pointer;
-    }
+  /*justify-content: space-between;*/
+  position: fixed; 
+  top: 0; 
+  width: 100%; 
+  z-index: 99999;
+}
 
-    .main{
-      height: auto;
+.menu-left {
+  display: flex;
+  justify-content: space-around;
+  align-items: center ;
+}
 
+.logo {
+  font-family: var(--font-primary);
+  font-size: 32px;
+  color: var(--green-ligth);
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  margin-right: 60px;
+}
+.logo img {
+  width: 32px;
+  margin-right: -5px;
+}
+
+.menu-item {
+  display: flex;
+  justify-content: right;
+  list-style: none;
+  gap: 30px;
+  color: var(--green-ligth);
+}
+.menu-link {
+  text-decoration: none;
+  color: var(--green-ligth);
+  cursor: pointer;
+  padding: 10px;
+}
+.menu-link:hover {
+  padding: 10px;
+  background: var(--green-transparent);
+  border-radius: 15px;
+}
+
+.menu-btn{
+  background-color: var(--green-ligth);
+  padding: 8px 20px;
+  border: none;
+  border-radius: 15px;
+  text-decoration: none;
+  color: var(--black-green);
+  cursor: pointer;
+}
+.menu-btn:hover {
+  filter: brightness(1.3);
+}
+
+/* ESTILO DO MENU MOBILE */
+.btn-sandwich button {
+  display: none;
+  padding: 10px;
+  background-color: var(--green-transparent);
+  border: none;
+  border-radius: 50%;
+}
+.mobile-menu {
+  display: none;
+  background: var(--gray-100);
+  height: 100vh;
+  width: 100vh;
+  position: fixed;
+  z-index: 10000;
+  padding: 1.2rem 6%;
+  margin-top: 1.5rem;
+  text-align: left;
+}
+.mobile-menu nav ul li {
+  list-style: none;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 300;
+  padding-top: 2.5rem;
+}
+.mobile-menu nav ul li a{
+  text-decoration: none;
+  color: var(--black-700);
+  text-align: left;
+}
+.open-menu{
+  display: block;
+}
+
+/*menu sublinhado*/
+.menu-underline{ 
+ 
+    width:100%; 
+    display:block; 
+    float:left;
+   }
+   .menu-underline a{
+       text-decoration: none;
+       color: var(--green-ligth);
+       text-align: center;
+       width: 130px;
+       padding:0.5em 0;
+       display: inline-block;
+       font-weight: bold;
+       transition: all .5s ease-in-out;
+   }
+   .menu-underline a:hover{
+       text-decoration:none;
       
-    }
-  /* Footer */
-  
-  footer > .interface{
-    background-color:var(--black-green);
-    box-shadow: 0 0 10px 2px #070707;
-    padding: 2.5rem 4%;
-    font-family: 'Montserrat', sans-serif;
-  }
-  .logo--footer{
-    align-items: center;
-    text-align: center;
-  }
-  .logo--footer img{
-    width: 250px;
-  }
-  .coders{       
-    width: 100%;
-    padding: 1.8rem;
-    background-color:var(--black-green);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 3.8rem;
-  }
-  .social{
-    list-style: none;
-    line-height: 2.5rem;
-  }
-  .social li{
-    color: #fff; 
-    text-align: center; 
-    font-size: 1.8rem;       
-  }
-  .social a{
-    text-decoration: none;
+   }
+   .menu-underline .underline{
+       width: 130px;
+       height:6px;
+       border-radius:3px; 
+       background-color: var(--green-ligth);
+       transition: all .4s ease-in-out;
+   }
+   .menu-underline a:nth-child(1):hover~.underline{
+       transition: all .4s ease-in-out;
+       
+   }
+   .menu-underline a:nth-child(1):hover{
+       color: var(--green-ligth);
+   }
     
-  }
-  .social span{
-    color: #59A928;
-    font-size: 1.8rem;
-  }
-  .social i{
-    padding: 0.4rem;
-    color: #59A928;
-    font-size: 1.8rem;    
-  }
-  .line--footer{ 
+   .menu-underline a:nth-child(2):hover{
+       color: var(--green-ligth);
+   }
+   .menu-underline a:nth-child(3):hover{
+       color: var(--green-ligth);
+   }
+   .menu-underline a:nth-child(4):hover{
+       color: var(--green-ligth);
+   }
+   .menu-underline a:nth-child(2):hover~.underline{
+       transform:translate(135px);
+       transition: all .4s ease-in-out;
+       background-color: var(--green-hover);
+   }
+   .menu-underline a:nth-child(3):hover~.underline{
+       transform:translate(270px);
+       transition: all .4s ease-in-out;
+       background-color: var(--green-hover);
+   }
+   .menu-underline a:nth-child(4):hover~.underline{
+       transform:translate(405px);
+       transition: all .4s ease-in-out;
+       background-color:  var(--green-hover);
+   }
+
+   main{
+    padding-top: 20px;
+    flex: 1;
+   }
+
+   #saldos {
     display: flex;
-    justify-content: space-between;
-    background-color: #000;
-    width: 100%;
-    padding: 0.6rem 2%;
-    color: #fff;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.6rem;
+    flex-wrap: wrap;
+    justify-content: space-around; /* ou 'space-between', dependendo do efeito desejado */
+    margin: 10px ;
+    margin-bottom: 90px;
   }
   
-  .text--small{
-    font-size: 1.1rem
+  .card-saldo {
+    flex: 1;
+    min-width: 200px; /* Defina um tamanho mínimo se necessário */
+    margin: 10px;
+    box-sizing: border-box;
+    border-radius: 10px; /* Adiciona bordas arredondadas */
+    overflow: hidden; /* Garante que o conteúdo não ultrapasse as bordas arredondadas */
+    border: 2px solid #ccc; /* Adiciona uma borda para destacar os cards */
+    transition: transform 0.3s; /* Adiciona uma transição suave ao passar o mouse */
   }
   
-  /* BARRA ROLAGHEM*/
-  /*
-  ::-webkit-scrollbar-track{
-    background-color: #232c3b;
+  .card-saldo:hover {
+    transform: scale(1.05); /* Aumenta o tamanho do card ao passar o mouse */
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave ao passar o mouse */
+  border-color: #666; /* Muda a cor da borda ao passar o mouse */
   }
-  ::-webkit-scrollbar{
-    width: 6px;
-    background: #f4f4f4;
+  
+  .card-saldo .card-body {
+    padding: 15px;
   }
-  ::-webkit-scrollbar-thumb{
-    background-color: #59a928;
+  
+  .card-saldo .card-title {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+  }
+  
+  .card-saldo .card-text {
+    font-size: 1.2em;
+    color: #555;
+  }
+
+  .list-group-item {
+    margin-top: 20px;
+    display: flex;
+    align-items: center; /* Alinhar verticalmente ao centro */
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
     border-radius: 5px;
   }
-  */
-  /* RESPONSIVO*/
   
-  @media screen and (max-width: 920px){
-    
-    header > .interface {
-      padding: 1rem 4%;
-    }
-    .menu--desktop{
-      padding: 1.5rem 4%;
-        
-    }
-    .nav--itens{
-      display: none;
-    }
-    
-    /* Main */
-
-    
-    #saldos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around; /* ou 'space-between', dependendo do efeito desejado */
-    }
-    
-    .card-saldo {
-      flex: 1;
-      min-width: 200px; /* Defina um tamanho mínimo se necessário */
-      margin: 10px;
-      box-sizing: border-box;
-      border-radius: 10px; /* Adiciona bordas arredondadas */
-      overflow: hidden; /* Garante que o conteúdo não ultrapasse as bordas arredondadas */
-      border: 2px solid #ccc; /* Adiciona uma borda para destacar os cards */
-      transition: transform 0.3s; /* Adiciona uma transição suave ao passar o mouse */
-    }
-    
-    .card-saldo:hover {
-      transform: scale(1.05); /* Aumenta o tamanho do card ao passar o mouse */
-     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave ao passar o mouse */
-    border-color: #666; /* Muda a cor da borda ao passar o mouse */
-    }
-    
-    .card-saldo .card-body {
-      padding: 15px;
-    }
-    
-    .card-saldo .card-title {
-      font-size: 1.5em;
-      margin-bottom: 10px;
-    }
-    
-    .card-saldo .card-text {
-      font-size: 1.2em;
-      color: #555;
-    }
-    .coders{
-        flex-wrap: wrap;
-    }
-    .menu--mobile{
-      display: block;
-    }
-    .btn--open{
-      display: block;
-    }
-    .btn--close{
-      display: block;
-    }
-   
+  .fa-money-bill-transfer {
+    font-size: 20px;
+    margin-right: 10px; /* Adicione uma margem à direita do ícone para espaçamento */
   }
-  @media only screen and (max-width: 640px){
-    .logo img{
-        width: 200px;
-    }
-    .line--footer{
-    flex-direction: column;  
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    padding: 0.6rem 2% ;
-    }
-    h2.title{
-      font-size: 1.8rem;
-    }
-    h2.title span::after{
-      top: .8rem;
-      width: 50px;
-      height: 0.3rem;
-    }
-    .search-box{
-      justify-content: center;
-    }
-  }
-  /* The Overlay (background) */
-  .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
-    height: 100%;
-    width: 0;
-    position: fixed; /* Stay in place */
-    z-index: 1111111; /* Sit on top */
-    left: 0;
-    top: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
-  }
-  
-  /* Position the content inside the overlay */
-  .overlay-content {
-    position: relative;
-    top: 25%; /* 25% from the top */
-    width: 100%; /* 100% width */
-    text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
-  }
-  
-  /* The navigation links inside the overlay */
-  .overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block; /* Display block instead of inline */
-    transition: 0.3s; /* Transition effects on hover (color) */
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-  }
-  
-  /* Position the close button (top right corner) */
-  .overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-    color: #fff;
-  }
-  .overlay .closebtn:hover{
-    color: #59a928;
-  }
-  .no-results{
-    font-size: 36px;
-    color: #fff;
-    font-weight: bold;
-  }
-  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-  @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
-      font-size: 40px;
-      top: 15px;
-      right: 35px;
-    }
-  }
-
-  /* Adicione estilos para os cards de saldos */
-/* Adicione estas regras ao seu arquivo CSS para ajustar o tamanho dos cards e do contêiner */
-/* Seu código CSS anterior... */
-
-/* Adicione estilos para os cards de saldos */
-#saldos {
-  display: flex;
-  overflow: hidden;
-  justify-content: center;
-  align-items: center;
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-.card-saldo {
-  width: 200px;
-  border-radius: 35px;
-  border-color: #18171c;
-  margin: 10px;
-  transition: transform 0.3s ease;
-  box-sizing: border-box;
-}
-
-/* Adicione estilos para o conteúdo dentro dos cards */
-.card-saldo .card-body {
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  height: 90px;
-}
-
-/* Adicione estilos para a descrição no card */
-.card-saldo .descricao-saldo {
-  font-weight: bold;
-  color: #333;
-}
-
-/* Adicione estilos para os valores no card */
-.card-saldo .valor-saldo {
-  font-size: 1.3em;
-  color: #555;
-}
-
-.card-text {
-  font-size: medium;
-}
-
-.list-group-item {
-  display: flex;
-  align-items: center; /* Alinhar verticalmente ao centro */
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.fa-money-bill-transfer {
-  font-size: 20px;
-  margin-right: 10px; /* Adicione uma margem à direita do ícone para espaçamento */
+   footer  {
+    background-color: var(--black-green);
+            color: var(--gray-400);
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
 }
